chore: upgrade to Java 21 (#110)
Closes: MODMARCMIG-42